<resources>
    <string name="app_name">Kanalvej Parking</string>
    <string name="employee_spaces">Employee</string>
    <string name="guest_spaces">Guest</string>
    <string name="public_spaces">Public</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>-1</item>
    </string-array>

    <string name="pref_sync_frequency_defaultvalue">10</string>

    <string name="sync_settings_title">Sync</string>
    <string name="notification_settings_title">Notifications</string>

    <string name="notification_distance_title">Distance</string>
    <string-array name="distanceListArray">
        <item>Never</item>
        <item>500m</item>
        <item>1km</item>
        <item>2km</item>
        <item>5km</item>
    </string-array>

    <!--This is going to be in metres-->
    <string-array name="distanceListValues">
        <item>0</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>

    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
</resources>
