<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="parkingSpaces"
            type="dk.jamiemagee.kanalvejparking.models.ParkingSpaces" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/cardview_light_background"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="dk.jamiemagee.kanalvejparking.activities.MainActivity">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:background="#dcdcdc"
                    android:padding="20sp">

                    <TextView
                        android:id="@+id/employee_spaces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/employee_spaces"
                        android:textSize="20sp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/employee_spaces_progress_bar"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end|center_vertical"
                            android:maxHeight="20dip"
                            android:minHeight="20dip" />

                        <TextView
                            android:id="@+id/employee_spaces_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end|center_vertical"
                            android:text="@{String.valueOf(parkingSpaces.employeeParking)}"
                            android:textSize="20sp"
                            android:visibility="invisible" />
                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:background="#dcdcdc"
                    android:padding="20sp">

                    <TextView
                        android:id="@+id/guest_spaces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/guest_spaces"
                        android:textSize="20sp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/guest_spaces_progress_bar"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end|center_vertical"
                            android:maxHeight="20dip"
                            android:minHeight="20dip" />

                        <TextView
                            android:id="@+id/guest_spaces_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end|center_vertical"
                            android:text="@{String.valueOf(parkingSpaces.guestParking)}"
                            android:textSize="20sp"
                            android:visibility="invisible" />
                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:background="#dcdcdc"
                    android:padding="20sp">

                    <TextView
                        android:id="@+id/public_spaces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/public_spaces"
                        android:textSize="20sp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/public_spaces_progress_bar"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end|center_vertical"
                            android:maxHeight="20dip"
                            android:minHeight="20dip" />

                        <TextView
                            android:id="@+id/public_spaces_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end|center_vertical"
                            android:text="@{String.valueOf(parkingSpaces.publicParking)}"
                            android:textSize="20sp"
                            android:visibility="invisible" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>
